[tool.poetry]
name = "frcdesign-org"
description = "FRCDesign.org is a comprehensive learning guide and technical reference for FRC design using Onshape."
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.6"
mkdocs-material = { extras = ["imaging"], version = "^9.5.29" }
mkdocs-glightbox = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
pymdown-extensions = "pyyaml"
mkdocs-git-committers-plugin-2 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
