[tool.poetry]
name = "frcdesign-org"
description = "FRCDesign.org is a comprehensive learning guide and technical reference for FRC design using Onshape."
license = "GPL-3.0-only"
readme = "README.md"
homepage = "https://frcdesign.org"
repository = "https://github.com/davidsdesignserver/FRCDesign.org"
keywords = ["FRC", "FIRST", "Robotics", "Design", "Onshape"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Robotics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
    "Operating System :: OS Independent",
    "Environment :: Web Environment",
    "Framework :: MkDocs",
    "Natural Language :: English",
]
package-mode = false

[tool.poetry.dependencies]
python = "3.10.6"
mkdocs-material = { extras = ["imaging"], version = "^9.5.29" }
mkdocs-glightbox = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^1.2.6"
pymdown-extensions = "pyyaml"
mkdocs-git-committers-plugin-2 = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
